--- a/tp2-lancer-piece/lancer_blank.ipynb
+++ b/tp2-lancer-piece/lancer_blank.ipynb
@@ -280,7 +280,7 @@
    "id": "343601f2-6d25-4ddd-bbd3-e33bd6d0a292",
    "metadata": {},
    "source": [
-    "**Comlétez les TODO pour simuler les données et calculer le _posterior_**"
+    "**Complétez les TODO pour simuler les données et calculer le _posterior_**"
    ]
   },
   {
