Ajouter version avec analyse plus proche du devoir

--- a/tp2-lancer-piece/lancer.ipynb
+++ b/tp2-lancer-piece/lancer.ipynb
@@ -53,9 +53,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "628b5d37",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -89,6 +87,7 @@
     "plt.xlabel(\"Bias envers face F\")\n",
     "plt.ylabel(\"Prior $p(F)$\")\n",
     "plt.show()\n",
+    "\n",
     "\n"
    ]
   },
@@ -281,9 +280,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "972b34ec",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -335,6 +332,7 @@
     "    ax.text(0.8, 0.87, f\"N={Ni}\", horizontalalignment=\"center\", transform=ax.transAxes)\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
+    "\n",
     "\n"
    ]
   },
@@ -449,7 +447,20 @@
    "source": [
     "On peut voir que le _prior_ \"Vegas\" converge assez rapidement à la même conclusion que le _prior_ uniforme.\n",
     "Ceci n'est pas trop surprenant: une fois les extrémités éliminées, le _prior_ \"Vegas\" est plutôt plat.\n",
-    "Pour ce qui est du prior Gaussien, on peut voir qu'il prend beaucoup plus de temps à converger vers la bonne solution en raison de la forte préférence initiale pour une pièce non biaisée."
+    "Pour ce qui est du prior Gaussien, on peut voir qu'il prend beaucoup plus de temps à converger vers la bonne solution en raison de la forte préférence initiale pour une pièce non biaisée.\n",
+    "\n",
+    "## Exemple réaliste: une seule expérience\n",
+    "\n",
+    "Nous pouvons maintenant faire un exemple réaliste avec une seule expérience et faire une analyse complète.\n",
+    "\n",
+    "1. Simuler l'expérience avec `f_true = 0.35` et `N=20`.\n",
+    "2. Calculer la distribution _posterior_.\n",
+    "3. Calculer l'évidence.\n",
+    "4. Normaliser la distribution _posterior_.\n",
+    "5. Calculer la moyenne, la médiane et la valeur maximale du posterior\n",
+    "6. Affichez ces valeurs sur le graphqieu\n",
+    "7. Calculez la valeur de l'écart type et affichez un intervalle.\n",
+    "8. Calculez un intervalle de confiance numérique à 68%."
    ]
   }
  ],
