Typos et explication devoir

--- a/tp2-lancer-piece/lancer_blank.ipynb
+++ b/tp2-lancer-piece/lancer_blank.ipynb
@@ -395,6 +395,9 @@
     "\n",
     "## Exemple réaliste: une seule expérience\n",
     "\n",
+    "_La section suivante est une bonne préparation pour le devoir. Une bonne partie de l'analyse ci-dessous pourra y être réutilisée. Vous pouvez donc utiliser cet exercice pour vous préparer au devoir._\n",
+    "\n",
+    "\n",
     "Nous pouvons maintenant faire un exemple réaliste avec une seule expérience et faire une analyse complète.\n",
     "\n",
     "1. Simuler l'expérience avec `f_true = 0.35` et `N=20`.\n",
@@ -402,7 +405,7 @@
     "3. Calculer l'évidence.\n",
     "4. Normaliser la distribution _posterior_.\n",
     "5. Calculer la moyenne, la médiane et la valeur maximale du posterior\n",
-    "6. Affichez ces valeurs sur le graphqieu\n",
+    "6. Affichez ces valeurs sur le graphqiue\n",
     "7. Calculez la valeur de l'écart type et affichez un intervalle.\n",
     "8. Calculez un intervalle de confiance numérique à 68%."
    ]
