--- a/tp2-lancer-piece/lancer.ipynb
+++ b/tp2-lancer-piece/lancer.ipynb
@@ -449,7 +449,9 @@
     "Ceci n'est pas trop surprenant: une fois les extrémités éliminées, le _prior_ \"Vegas\" est plutôt plat.\n",
     "Pour ce qui est du prior Gaussien, on peut voir qu'il prend beaucoup plus de temps à converger vers la bonne solution en raison de la forte préférence initiale pour une pièce non biaisée.\n",
     "\n",
-    "## Exemple réaliste: une seule expérience\n",
+    "## Exemple réaliste: analyse complète d'une seule expérience\n",
+    "\n",
+    "_La section suivante est une bonne préparation pour le devoir. Une bonne partie de l'analyse ci-dessous pourra y être réutilisée. Vous pouvez donc utiliser cet exercice pour vous préparer au devoir._\n",
     "\n",
     "Nous pouvons maintenant faire un exemple réaliste avec une seule expérience et faire une analyse complète.\n",
     "\n",
@@ -458,7 +460,7 @@
     "3. Calculer l'évidence.\n",
     "4. Normaliser la distribution _posterior_.\n",
     "5. Calculer la moyenne, la médiane et la valeur maximale du posterior\n",
-    "6. Affichez ces valeurs sur le graphqieu\n",
+    "6. Affichez ces valeurs sur le graphqiue\n",
     "7. Calculez la valeur de l'écart type et affichez un intervalle.\n",
     "8. Calculez un intervalle de confiance numérique à 68%."
    ]
