exposant negatif gaussienne

--- a/tp2-lancer-piece/lancer_blank.ipynb
+++ b/tp2-lancer-piece/lancer_blank.ipynb
@@ -59,9 +59,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "628b5d37",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def prior_uniform(\n",
@@ -259,9 +257,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "49e585aa-6fca-4ad8-bff4-57d61a81327b",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def likelihood(f: np.ndarray[float], r: int, n: int) -> np.ndarray:\n",
@@ -287,9 +283,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "199c912e-8cf5-4004-98b3-849e29016e4e",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "N_values = 2 ** np.arange(13)\n",
@@ -328,7 +322,7 @@
     "Nous utiliserons un _prior_ Gaussien qui assume une pièce normale et un _prior_ \"Vegas\" qui assume une pièce biaisée.\n",
     "\n",
     "$$\n",
-    "p_G(F) = \\frac{1}{\\sqrt{2 \\pi}\\sigma} e^{(F - \\mu)^2 / 2 \\sigma^2},\n",
+    "p_G(F) = \\frac{1}{\\sqrt{2 \\pi}\\sigma} e^{-(F - \\mu)^2 / 2 \\sigma^2},\n",
     "$$\n",
     "\n",
     "où on utilise $\\mu=0.5$ et $\\sigma=0.05$.\n",
