--- a/tp3-mcmc/mcmc_blank.ipynb
+++ b/tp3-mcmc/mcmc_blank.ipynb
@@ -197,7 +197,7 @@
     "L'équation d'une normale à N dimensions est donnée par:\n",
     "\n",
     "$$\n",
-    "(2\\pi)^{-N/2} \\det{(V)}^{-1/2} \\exp{\\left(-\\frac{1}{2}(\\theta - \\mu)^T V^{-1} (\\theta - \\mu)\\right)}\n",
+    "p(\\theta) = (2\\pi)^{-N/2} \\det{(V)}^{-1/2} \\exp{\\left(-\\frac{1}{2}(\\theta - \\mu)^T V^{-1} (\\theta - \\mu)\\right)}\n",
     "$$\n",
     "\n",
     "Vous pouvez coder le log de cette densité dans la cellule ci-dessous. Elle devrait accepter un paramètre `theta` contenant deux valeurs."
