--- a/tp3-mcmc/mcmc.ipynb
+++ b/tp3-mcmc/mcmc.ipynb
@@ -861,8 +861,7 @@
  "metadata": {
   "jupytext": {
    "cell_metadata_filter": "-all",
-   "main_language": "python",
-   "notebook_metadata_filter": "-all"
+   "main_language": "python"
   },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
