--- a/tp7-backprop-pytorch/intro_pytorch.ipynb
+++ b/tp7-backprop-pytorch/intro_pytorch.ipynb
@@ -1759,7 +1759,7 @@
     }
    ],
    "source": [
-    "pprint.pprint(list(model.named_parameters()))"
+    "pprint.pprint(list(model.named_parameters())"
    ]
   },
   {
