--- a/tp11-transformers/vit.ipynb
+++ b/tp11-transformers/vit.ipynb
@@ -1397,11 +1397,11 @@
         "test_loss = test_loop(test_dataloader, model, loss_fn)"
       ],
       "metadata": {
-        "id": "iTCIE3a9CdxG",
-        "outputId": "1e2ae60a-0f68-4231-9009-89689ca0a174",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iTCIE3a9CdxG",
+        "outputId": "1e2ae60a-0f68-4231-9009-89689ca0a174"
       },
       "id": "iTCIE3a9CdxG",
       "execution_count": 49,
@@ -1419,7 +1419,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 50,
       "id": "65707748",
       "metadata": {
         "colab": {
@@ -1437,7 +1437,93 @@
             "-------------------------------\n",
             "Loss: 2.2584729194641113, [16/5000]\n",
             "Loss: 1.5879453420639038, [1616/5000]\n",
-            "Loss: 1.0549874305725098, [3216/5000]\n"
+            "Loss: 1.0549874305725098, [3216/5000]\n",
+            "Loss: 0.6614205837249756, [4816/5000]\n",
+            "Test Error: \n",
+            " Accuracy: 91.0%, Avg loss: 0.6238343351417117 \n",
+            "\n",
+            "Epoch 2\n",
+            "-------------------------------\n",
+            "Loss: 0.6515703201293945, [16/5000]\n",
+            "Loss: 0.3355845808982849, [1616/5000]\n",
+            "Loss: 0.29411837458610535, [3216/5000]\n",
+            "Loss: 0.39526763558387756, [4816/5000]\n",
+            "Test Error: \n",
+            " Accuracy: 93.10000000000001%, Avg loss: 0.3106360811562765 \n",
+            "\n",
+            "Epoch 3\n",
+            "-------------------------------\n",
+            "Loss: 0.19891957938671112, [16/5000]\n",
+            "Loss: 0.21130914986133575, [1616/5000]\n",
+            "Loss: 0.16443321108818054, [3216/5000]\n",
+            "Loss: 0.10640111565589905, [4816/5000]\n",
+            "Test Error: \n",
+            " Accuracy: 94.6%, Avg loss: 0.21787476320824925 \n",
+            "\n",
+            "Epoch 4\n",
+            "-------------------------------\n",
+            "Loss: 0.1223025918006897, [16/5000]\n",
+            "Loss: 0.1483655869960785, [1616/5000]\n",
+            "Loss: 0.23367545008659363, [3216/5000]\n",
+            "Loss: 0.2821774184703827, [4816/5000]\n",
+            "Test Error: \n",
+            " Accuracy: 94.69999999999999%, Avg loss: 0.1871456005980098 \n",
+            "\n",
+            "Epoch 5\n",
+            "-------------------------------\n",
+            "Loss: 0.0383167527616024, [16/5000]\n",
+            "Loss: 0.06797550618648529, [1616/5000]\n",
+            "Loss: 0.07166919112205505, [3216/5000]\n",
+            "Loss: 0.08194377273321152, [4816/5000]\n",
+            "Test Error: \n",
+            " Accuracy: 95.39999999999999%, Avg loss: 0.16362877039327509 \n",
+            "\n",
+            "Epoch 6\n",
+            "-------------------------------\n",
+            "Loss: 0.11169792711734772, [16/5000]\n",
+            "Loss: 0.05983971431851387, [1616/5000]\n",
+            "Loss: 0.026733096688985825, [3216/5000]\n",
+            "Loss: 0.04657605290412903, [4816/5000]\n",
+            "Test Error: \n",
+            " Accuracy: 94.8%, Avg loss: 0.16100771036294717 \n",
+            "\n",
+            "Epoch 7\n",
+            "-------------------------------\n",
+            "Loss: 0.03898479416966438, [16/5000]\n",
+            "Loss: 0.03114432282745838, [1616/5000]\n",
+            "Loss: 0.027009479701519012, [3216/5000]\n",
+            "Loss: 0.019704269245266914, [4816/5000]\n",
+            "Test Error: \n",
+            " Accuracy: 95.3%, Avg loss: 0.15509100809752469 \n",
+            "\n",
+            "Epoch 8\n",
+            "-------------------------------\n",
+            "Loss: 0.0544377863407135, [16/5000]\n",
+            "Loss: 0.0985947921872139, [1616/5000]\n",
+            "Loss: 0.03874997794628143, [3216/5000]\n",
+            "Loss: 0.030496299266815186, [4816/5000]\n",
+            "Test Error: \n",
+            " Accuracy: 95.3%, Avg loss: 0.15361546865472245 \n",
+            "\n",
+            "Epoch 9\n",
+            "-------------------------------\n",
+            "Loss: 0.015810946002602577, [16/5000]\n",
+            "Loss: 0.017241589725017548, [1616/5000]\n",
+            "Loss: 0.015938902273774147, [3216/5000]\n",
+            "Loss: 0.025837019085884094, [4816/5000]\n",
+            "Test Error: \n",
+            " Accuracy: 95.1%, Avg loss: 0.1566618706528393 \n",
+            "\n",
+            "Epoch 10\n",
+            "-------------------------------\n",
+            "Loss: 0.028674006462097168, [16/5000]\n",
+            "Loss: 0.016427336260676384, [1616/5000]\n",
+            "Loss: 0.05178689584136009, [3216/5000]\n",
+            "Loss: 0.01189112477004528, [4816/5000]\n",
+            "Test Error: \n",
+            " Accuracy: 95.19999999999999%, Avg loss: 0.15984738000210316 \n",
+            "\n",
+            "Done!\n"
           ]
         }
       ],
