Add example step by step

--- a/tp11-transformers/vit_blank.ipynb
+++ b/tp11-transformers/vit_blank.ipynb
@@ -564,7 +564,8 @@
         "Il existe énormément de références sur les transformeurs. En voici quelques unes:\n",
         "\n",
         "- Chapitre d'un livre en ligne sur ViT: <https://d2l.ai/chapter_attention-mechanisms-and-transformers/vision-transformer.html>\n",
-        "- Implémentation de plusieurs transformers en PyTorch: <https://github.com/lucidrains/vit-pytorch>"
+        "- Implémentation de plusieurs transformers en PyTorch: <https://github.com/lucidrains/vit-pytorch>\n",
+        "- Un tutoriel détaillé sur une implémentation de ViT étape par étape: <https://medium.com/data-science/implementing-vision-transformer-vit-from-scratch-3e192c6155f0>"
       ]
     }
   ],
