--- a/cours02-hmc-gp/tp_gp_hmc_blank.ipynb
+++ b/cours02-hmc-gp/tp_gp_hmc_blank.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "Pour que le modèle soit compatible avec `tinygp` et NumPyro, nous allons le créer avec `jax`.\n",
     "\n",
-    "**Implémentez le modèle ci-dessus avec JAX (`jnp`). Utilisez un dictionnaire de paramètres comme premier argument et une valeur de $x$ comme deuxième argument.\n",
+    "**Implémentez le modèle ci-dessus avec JAX (`jnp`). Utilisez un dictionnaire de paramètres comme premier argument et une valeur de $x$ comme deuxième argument.**\n",
     "\n",
     "_Note: C'est un hasard qu'on utilise une **gaussienne** comme modèle paramétrique avec notre processus **gaussien**. La fonction paramétrique (\"mean function\") aurait pu être une droite, un sinus, un transit, etc., selon les données qu'on observe._"
    ]
