Updates from public

--- a/tp3-mcmc/mcmc.ipynb
+++ b/tp3-mcmc/mcmc.ipynb
@@ -861,7 +861,8 @@
  "metadata": {
   "jupytext": {
    "cell_metadata_filter": "-all",
-   "main_language": "python"
+   "main_language": "python",
+   "notebook_metadata_filter": "-all"
   },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
